welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: overloaded method value & with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Boolean)
		if (nums(i)=nums(i+1) & nums(i)==nums(i+2)){
                                      ^